cabal-version: 3.0
name:          armadillo-cli
version:       0.1.0.0
synopsis:      CLI
license-file:  LICENSE
license:       Apache-2.0
author:        Jann Müller <j-mueller@users.noreply.github.com>
maintainer:    Jann Müller <j-mueller@users.noreply.github.com>
copyright:     (c) 2023 Jann Müller
build-type:    Simple
data-files:
  data/scripts/deposit.uplc
  data/scripts/poolV1.uplc
  data/scripts/poolV2.uplc
  data/scripts/redeem.uplc
  data/scripts/swap.uplc

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  other-extensions:
    ConstrainedClassMethods
    DeriveAnyClass
    ExistentialQuantification
    FlexibleInstances
    GADTs
    MonadComprehensions
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  lib
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise

  exposed-modules:
    Armadillo.Api
    Armadillo.BuildTx
    Armadillo.ChainFollower.DepositState
    Armadillo.ChainFollower.PoolState
    Armadillo.ChainFollower.State
    Armadillo.Cli
    Armadillo.Cli.Command
    Armadillo.Command
    Armadillo.NodeClient
    Armadillo.Orphans
    Armadillo.Scripts
    Armadillo.Server
    Armadillo.Server.Mock
    Armadillo.Server.Real
    Armadillo.Utils

  build-depends:
    , aeson
    , aeson-pretty
    , base                                                              >=4.16
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-dex-contracts-offchain
    , cborg
    , containers
    , convex-base
    , convex-coin-selection
    , convex-node-client
    , convex-wallet
    , dhall
    , filepath
    , http-client
    , katip
    , lens
    , mtl
    , openapi3
    , optparse-applicative
    , plutus-core
    , plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib}
    , plutus-tx
    , serialise
    , servant
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-server
    , stm
    , text
    , transformers
    , warp

  other-modules:   Paths_armadillo_cli
  autogen-modules: Paths_armadillo_cli

executable armadillo-cli
  import:           lang
  main-is:          Main.hs
  build-depends:
    , armadillo-cli
    , base           >=4.14.3.0

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -O2 -with-rtsopts=-N2

test-suite armadillo-cli-test
  import:           lang
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Armadillo.Test.AMMExecutor
    Armadillo.Test.CliCommand
    Armadillo.Test.DevEnv
    Armadillo.Test.Explorer
    Armadillo.Test.Integration
    Armadillo.Test.Utils

  other-modules:    Paths_armadillo_cli
  build-depends:
    , aeson
    , armadillo-cli
    , async
    , base                 >=4.14.3.0
    , bytestring
    , cardano-api
    , containers
    , contra-tracer
    , convex-base
    , convex-devnet
    , convex-wallet
    , dhall
    , filepath
    , hlog
    , http-client
    , lens
    , mtl
    , ouroboros-consensus
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , process
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , tasty
    , tasty-hunit
    , temporary
    , text
    , time
    , warp

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -O2

executable armadillo-cli-dev
  import:           lang
  main-is:          Devnet.hs
  other-modules:
    Armadillo.Test.AMMExecutor
    Armadillo.Test.CliCommand
    Armadillo.Test.DevEnv
    Armadillo.Test.Explorer
    Armadillo.Test.Integration
    Armadillo.Test.Utils

  build-depends:
    , aeson
    , armadillo-cli
    , async
    , base                 >=4.14.3.0
    , bytestring
    , cardano-api
    , containers
    , contra-tracer
    , convex-base
    , convex-devnet
    , convex-wallet
    , dhall
    , filepath
    , hlog
    , http-client
    , lens
    , mtl
    , ouroboros-consensus
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , process
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , tasty
    , tasty-hunit
    , temporary
    , text
    , time
    , warp

  other-modules:    Paths_armadillo_cli
  hs-source-dirs:   test app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -O2
